[gd_scene load_steps=15 format=3 uid="uid://bxo8ec73h6odf"]

[ext_resource type="Texture2D" uid="uid://ei6aqoyl06qp" path="res://assets/sprites/Background.png" id="1"]
[ext_resource type="Script" uid="uid://dxu66oe15lbtm" path="res://scenes/Battle.gd" id="1_2rusm"]
[ext_resource type="Texture2D" uid="uid://bqa4wmnwn576r" path="res://assets/sprites/Dragon.png" id="2"]
[ext_resource type="Resource" uid="uid://bamkj37cu7mff" path="res://scenes/Dragon.tres" id="2_0y4rl"]
[ext_resource type="FontFile" uid="uid://cp81mbkme88fm" path="res://assets/fonts/Adventurer.ttf" id="4_6grd4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0448q"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rusm"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6grd4"]
bg_color = Color(0, 0, 0, 0.5019608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0y4rl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggyc1"]
bg_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8l6q"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2cxp4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xoqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2cxp4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rusm")
enemy = ExtResource("2_0y4rl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1")

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -63.5
offset_right = 72.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0448q")
theme_override_styles/fill = SubResource("StyleBoxFlat_2rusm")
step = 1.0
value = 50.0
show_percentage = false

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
texture = ExtResource("2")

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -32.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6grd4")

[node name="MarginContainer" type="MarginContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerPanel/MarginContainer/PlayerData"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_6grd4")
text = "PLAYER"

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/MarginContainer/PlayerData"]
custom_minimum_size = Vector2(120, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_0448q")
theme_override_styles/fill = SubResource("StyleBoxFlat_2rusm")
step = 1.0
value = 50.0
show_percentage = false

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6grd4")

[node name="MarginContainer" type="MarginContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Actions" type="HBoxContainer" parent="ActionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="AttackButton" type="Button" parent="ActionsPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6grd4")
theme_override_styles/normal = SubResource("StyleBoxFlat_0y4rl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ggyc1")
theme_override_styles/hover = SubResource("StyleBoxFlat_p8l6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2cxp4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xoqm")
text = "ATTACK
"

[node name="DefendButton" type="Button" parent="ActionsPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6grd4")
theme_override_styles/normal = SubResource("StyleBoxFlat_0y4rl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ggyc1")
theme_override_styles/hover = SubResource("StyleBoxFlat_p8l6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2cxp4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xoqm")
text = "DEFEND
"

[node name="RunButton" type="Button" parent="ActionsPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6grd4")
theme_override_styles/normal = SubResource("StyleBoxFlat_0y4rl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ggyc1")
theme_override_styles/hover = SubResource("StyleBoxFlat_p8l6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2cxp4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xoqm")
text = "RUN
"

[node name="Textbox" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 54)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2cxp4")

[node name="MarginContainer" type="MarginContainer" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Textbox/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_6grd4")
text = "Textbox value"

[node name="Ticker" type="Label" parent="Textbox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_6grd4")
text = ">"

[connection signal="pressed" from="ActionsPanel/MarginContainer/Actions/RunButton" to="." method="_on_run_button_pressed"]
